test/valid/fc36994_TestNameSpace/SameNameTest.plume
/**
 * For testing NameSpaces
 * @author 36994, César Santos
 */
class SameNameTest extends Object is
  method SameNameTest : () -> Boolean is
    true