test/invalid/FieldsUnmutable/FieldsUnmutable.plume
/**
 * @author Robin Burgess 36815
 */
 class FieldsUnmutable extends Object is
	field variable : Integer
	method setVariable : (i : Integer) -> Boolean is
		variable = i
		true